# api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  ImageHandler.py  Makefile  README.md  demo.py  demo2.py  openapi.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  pipeline.yml
api/: app.py  config.py  extensions.py  utils.py
api/date/: routes.py
api/image/: routes.py
api/templates/: index.html
aws/: SETUP.md  billing.yml  build_lambda_code.py  cloudformation.yml  deploy.sh  deploy.yml  index.py  ping.py  roles.yml
demo/: app.py  test.py
demo/demo/: settings.py  urls.py
demo/templates/: index.html
examples/: create_image.py
imaginate_api/: __init__.py  app.py  config.py  demo.py  extensions.py  image_handler.py  utils.py
imaginate_api/date/: routes.py
imaginate_api/image/: routes.py
imaginate_api/schemas/: date_info.py  image_info.py  user_info.py
imaginate_api/templates/: index.html  verification_portal.html
imaginate_api/user/: routes.py
scripts/: add_api_url.py
tests/unit/: test_app.py  test_image_handler.py
