[tool.poetry]
name = "api"
version = "0.1.0"
description = "Imaginate API"
authors = [
  "Nathan <probysuper8@gmail.com>",
  "Faisal <faisalfawad2004@gmail.com>"]
readme = "README.md"
repository = "https://github.com/imaginateai/api"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.0"
Flask = "^2.0"
pymongo = "^4.0"
python-dotenv = "^0.21"
setuptools = "^70.2.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
mongomock = "^4.1.2"
image-handler-client = {git = "https://github.com/imaginate-ai/image-handler-client.git", rev = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.ruff]
exclude = []
line-length = 88
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["api"]
testpaths = ["tests/unit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
